# post-research

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
backend/apps/bff/: nest-cli.json  package.json  schema.gql  tsconfig.json
backend/apps/bff/src/: app.module.ts  main.ts
backend/apps/bff/src/checker/: checker.module.ts  checker.resolver.ts
backend/apps/bff/src/checker/models/: checked-research.model.ts
backend/apps/research-checker-rs/: .env  Cargo.toml  build.rs  diesel.toml
backend/apps/research-checker-rs/migrations/2025-01-20-150117_create_retraction_table/: down.sql  up.sql
backend/apps/research-checker-rs/src/: main.rs  schema.rs
backend/apps/research-checker-rs/src/db/: mod.rs  models.rs
backend/apps/research-checker-rs/src/research_checker_service/: mod.rs  proto.rs  service.rs
backend/apps/research-parser-ts/: package-lock.json  package.json
backend/apps/research-parser-ts/src/: app.module.ts  grpc-client.options.ts  main.ts  research_checker.proto
backend/apps/research-parser-ts/src/research-parser-service/: research-parser.controller.ts  research-parser.module.ts
backend/apps/research-parser-ts/src/research-parser-service/interfaces/: research_parser.ts
backend/contracts/: research_checker.client.ts  research_checker.ts
backend/contracts/research_checker/: research_checker.proto
backend/contracts/research_parser/: research_parser.proto
ext/: index.html  manifest.json  popup.js
