[package]
name = "research_checker_rs"
version = "0.0.1"
edition = "2021"

[profile.release]
strip = "symbols"

[dependencies]
dotenv = { version = "0.15.0", optional = true }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

poem = { version = "1.3" }
poem-grpc = { version = "0.2" }
prost = "0.12"
prost-types = "0.12"

serde = { version = "1.0", features = ["derive"]}
config = "0.13"

diesel = { version = "2.2.0", features = ["postgres"] }

csv = { version = "1.3.1", optional = true }

[build-dependencies]
poem-grpc-build = { version = '0.2' }

[features]
default = ["dotenv"]
parse_retraction_table = ["csv"]